<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/interval_16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyStyle3"
        app:hintTextAppearance="@style/MyStyle">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="@dimen/sp_16" />
    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_sms_code"
            android:orientation="horizontal"
            app:counterEnabled="true"
            app:counterMaxLength="6"
            app:counterOverflowTextAppearance="@style/MyStyle2"
            app:counterTextAppearance="@style/MyStyle1"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyStyle3"
            app:hintTextAppearance="@style/MyStyle">

            <EditText
                android:id="@+id/et_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="@dimen/sp_16" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_get_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="top"
            android:paddingTop="20dp"
            android:text="@string/get_sms_code"
            android:textColor="@color/sel_get_sms"
            android:textSize="@dimen/sp_16" />
    </FrameLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_go_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/go_register" />

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/forget_password" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_sms_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/bg_login"
        android:text="@string/login"
        android:textColor="@color/white" />

</LinearLayout>
