<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@drawable/bg_cart_bottom"
    android:orientation="horizontal">

    <CheckBox
        android:id="@+id/cb_select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_all"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/tv_order_total"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|end"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:text="@string/total_fee"
        android:textSize="@dimen/text_size_14sp" />

    <TextView
        android:id="@+id/tv_cart_settle"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:background="@color/red_d71827"
        android:gravity="center"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:text="@string/settle"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16sp" />
</LinearLayout>