<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zhy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/interval_16dp">

        <TextView
            android:id="@+id/tv_hot_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hot_search"
            android:visibility="gone" />

        <com.zhy.view.flowlayout.TagFlowLayout
            android:id="@+id/flow_hot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/interval_10dp"
            android:paddingTop="@dimen/interval_10dp"
            zhy:max_select="1">


        </com.zhy.view.flowlayout.TagFlowLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_search" />

            <TextView
                android:id="@+id/tv_clear_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/clear" />
        </RelativeLayout>

        <com.zhy.view.flowlayout.TagFlowLayout
            android:id="@+id/flow_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/interval_10dp"
            android:paddingTop="@dimen/interval_10dp"
            zhy:max_select="1">

        </com.zhy.view.flowlayout.TagFlowLayout>

        <TextView
            android:id="@+id/tv_no_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/history_search_null" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
