<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_old_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/interval_10dp"
        android:layout_marginRight="@dimen/interval_10dp"
        android:layout_marginTop="@dimen/interval_10dp"
        android:background="@drawable/bg_auth_code"
        android:hint="@string/hint_old_password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:padding="@dimen/interval_10dp"
        android:textColor="@color/black_333"
        android:textSize="@dimen/text_size_14sp" />

    <EditText
        android:id="@+id/et_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/interval_10dp"
        android:layout_marginRight="@dimen/interval_10dp"
        android:layout_marginTop="@dimen/interval_10dp"
        android:background="@drawable/bg_auth_code"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:padding="@dimen/interval_10dp"
        android:textColor="@color/black_333"
        android:textSize="@dimen/text_size_14sp" />

    <EditText
        android:id="@+id/et_define_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/interval_10dp"
        android:layout_marginRight="@dimen/interval_10dp"
        android:layout_marginTop="@dimen/interval_10dp"
        android:background="@drawable/bg_auth_code"
        android:hint="@string/hint_define_password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:padding="@dimen/interval_10dp"
        android:textColor="@color/black_333"
        android:textSize="@dimen/text_size_14sp" />

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/interval_44dp"
        android:layout_marginLeft="@dimen/interval_10dp"
        android:layout_marginRight="@dimen/interval_10dp"
        android:layout_marginTop="@dimen/interval_10dp"
        android:background="@drawable/bg_login"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16sp" />


</LinearLayout>
